--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -109,7 +109,7 @@
         android:layout_marginRight="@dimen/margin_0dp"
         app:layout_constraintBottom_toBottomOf="@id/guideline4"
         android:layout_marginBottom="@dimen/margin_8dp"
-        android:hint="@string/email"
+        android:hint="@string/username"
         android:background="@drawable/textview_ui1"
         android:gravity="center"/>
 
