--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/guidel7"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.85" />
+        app:layout_constraintGuide_percent="0.80" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -32,37 +32,31 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline10"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.15" />
+        app:layout_constraintGuide_percent="0.17" />
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline11"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.26" />
+        app:layout_constraintGuide_percent="0.28" />
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline12"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.37" />
+        app:layout_constraintGuide_percent="0.39" />
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline13"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.48" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline14"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.59" />
+        app:layout_constraintGuide_percent="0.50" />
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline15"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.60" />
+        app:layout_constraintGuide_percent="0.53" />
     <LinearLayout
         android:id="@+id/linear1"
         android:layout_width="0dp"
@@ -95,13 +89,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline6"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.70" />
+        app:layout_constraintGuide_percent="0.63" />
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline8"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.95" />
+        app:layout_constraintGuide_percent="0.90" />
     <EditText
         android:id="@+id/edtEmail_signup"
         android:layout_width="0dp"
@@ -114,7 +108,7 @@
         android:layout_marginRight="@dimen/margin_0dp"
         app:layout_constraintBottom_toBottomOf="@id/guideline11"
         android:layout_marginBottom="@dimen/margin_8dp"
-        android:hint="@string/email"
+        android:hint="@string/username"
         android:gravity="center"
         android:background="@drawable/textview_ui1"
         app:layout_constraintHorizontal_bias="0.0" />
@@ -149,22 +143,6 @@
         android:hint="@string/confirm_password"
         android:gravity="center"
         android:background="@drawable/textview_ui1"/>
-    <EditText
-        android:id="@+id/edtDisplayName_signup"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/guideline13"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline2"
-        android:layout_marginLeft="@dimen/margin_0dp"
-        app:layout_constraintRight_toRightOf="@id/guideline3"
-        android:layout_marginRight="@dimen/margin_0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline14"
-        android:layout_marginBottom="@dimen/margin_8dp"
-        android:hint="@string/display_name"
-        android:gravity="center"
-        android:background="@drawable/textview_ui1"/>
-
 
 
     <Button
@@ -200,7 +178,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline5"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7496206" />
+        app:layout_constraintGuide_percent="0.70" />
 
     <Button
         android:id="@+id/btnLoginFB_signup"
