--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,10 +10,9 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="@dimen/margin_16dp"
+        android:layout_marginLeft="@dimen/margin_8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="@dimen/margin_16dp"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_marginRight="@dimen/margin_8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="68dp"/>
 </android.support.constraint.ConstraintLayout>
