--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -4,21 +4,20 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_home"/>
 
     <item
         android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="@string/title_search" />
+        android:icon="@drawable/ic_bookmark_black_24dp"
+        android:title="@string/title_bookmark"/>
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications"
-        />
+        android:title="@string/title_notifications"/>
 
     <item
         android:id="@+id/navigation_maps"
         android:icon="@drawable/ic_place_black_24dp"
-        android:title="@string/title_maps" />
+        android:title="@string/title_maps"/>
 </menu>
