--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorPrimary1">#008000</color>
     <color name="colorPrimaryDark">#3cb963</color>
     <color name="colorAccent">#3cb963</color>
+    <color name="colorBlueLight">#f5eae4</color>
+
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#424242</color>
     <color name="colorBlackDark">#323232</color>
