--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -8,5 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/margin_4dp"
-        android:layout_marginRight="@dimen/margin_4dp"/>
+        android:layout_marginRight="@dimen/margin_4dp"
+        android:layout_marginBottom="68dp"/>
 </LinearLayout>
