--- a/app/src/main/res/layout/row_item_notifications.xml
+++ b/app/src/main/res/layout/row_item_notifications.xml
@@ -29,16 +29,16 @@
         android:paddingRight="@dimen/margin_16dp"
         android:textColor="@color/colorPrimary"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_food_name"
+        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_nameRes_noti"
         android:layout_marginRight="0dp" />
     <TextView
-        android:id="@+id/text_view_food_name"
+        android:id="@+id/text_view_nameRes_noti"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:layout_marginLeft="@dimen/margin_16dp"
         app:layout_constraintLeft_toRightOf="@id/frame_noti"
-        app:layout_constraintRight_toLeftOf="@id/text_view_food_price"
+        app:layout_constraintRight_toLeftOf="@id/text_view_ago_noti"
         android:textSize="19dip"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -50,7 +50,7 @@
         android:id="@+id/text_view_food_decription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/text_view_food_name"
+        app:layout_constraintTop_toBottomOf="@id/text_view_nameRes_noti"
         android:layout_marginTop="@dimen/margin_4dp"
         app:layout_constraintLeft_toRightOf="@id/frame_noti"
         android:layout_marginLeft="@dimen/margin_16dp"
