--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.linhnv.foodsy.PlaceDetailActivity">
+    tools:context="com.linhnv.foodsy.activity.PlaceDetailActivity">
 
     <include
         layout="@layout/toolbar_detail"
