--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.linhnv.foodsy.UpdateInfoActivity">
+    tools:context="com.linhnv.foodsy.activity.UpdateInfoActivity">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline1"
@@ -69,7 +69,8 @@
         android:layout_marginTop="@dimen/margin_32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:onClick="showPopupMenu"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -80,6 +81,7 @@
         android:textSize="18dip"
         android:gravity="center"/>
     <EditText
+        android:id="@+id/edit_text_fullname"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/guideline1"
@@ -94,6 +96,7 @@
         android:background="@drawable/textview_ui1"
         android:gravity="center"/>
     <EditText
+        android:id="@+id/edit_text_email"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/guideline2"
@@ -108,6 +111,7 @@
         android:background="@drawable/textview_ui1"
         android:gravity="center"/>
     <EditText
+        android:id="@+id/edit_text_address"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/guideline5"
@@ -122,6 +126,7 @@
         android:background="@drawable/textview_ui1"
         android:gravity="center"/>
     <EditText
+        android:id="@+id/edit_text_phone"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/guideline6"
@@ -136,6 +141,7 @@
         android:background="@drawable/textview_ui1"
         android:gravity="center"/>
     <LinearLayout
+        android:id="@+id/linear_sex"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
@@ -152,15 +158,18 @@
             android:textSize="17dip"
             android:layout_marginTop="@dimen/margin_8dp"/>
         <RadioGroup
+            android:id="@+id/radio_sex"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:orientation="horizontal">
             <RadioButton
+                android:id="@+id/radio_male"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/male"/>
             <RadioButton
+                android:id="@+id/radio_female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/female"
@@ -168,6 +177,7 @@
         </RadioGroup>
     </LinearLayout>
     <Button
+        android:id="@+id/button_update_info"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/guideline8"
