--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -11,8 +11,7 @@
     <include
         layout="@layout/toolbar_detail"
         />
-    <include
-        layout="@layout/content_place_detail"
-        />
+
+    <include layout="@layout/content_place_detail" />
 
 </LinearLayout>
