--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,209 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.linhnv.foodsy.activity.SignInActivity">
+    android:layout_height="match_parent">
+
     <android.support.constraint.Guideline
+        android:id="@+id/guideline1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline1"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.10" />
 
     <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline2"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.90" />
+
     <android.support.constraint.Guideline
+        android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline3"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.15" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline4"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.26" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline5"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.37" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline6"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.40" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline7"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.50" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline8"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.56" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline9"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.62" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline10"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.72" />
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline11"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.82" />
+
     <LinearLayout
         android:id="@+id/linear1"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="@dimen/margin_16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="@dimen/margin_0dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="@dimen/margin_0dp"
-        android:gravity="center">
+        android:layout_marginTop="@dimen/margin_16dp"
+        android:gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <ImageView
             android:id="@+id/imgCloseSignIn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/back"
-            android:layout_marginLeft="@dimen/margin_16dp"/>
+            android:layout_marginLeft="@dimen/margin_16dp"
+            android:src="@drawable/back" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="@string/sign_in"
-            android:gravity="center"
             android:layout_marginRight="46dp"
+            android:gravity="center"
+            android:text="@string/sign_in"
             android:textSize="@dimen/text_size_19dip"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </LinearLayout>
+
     <EditText
         android:id="@+id/edit_text_username_signin"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline3"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline1"
-        android:layout_marginLeft="@dimen/margin_0dp"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
-        android:layout_marginRight="@dimen/margin_0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline4"
+        android:layout_height="45dp"
         android:layout_marginBottom="@dimen/margin_8dp"
-        android:hint="@string/username"
+        android:layout_marginLeft="@dimen/margin_0dp"
+        android:layout_marginRight="@dimen/margin_0dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:background="@drawable/textview_ui1"
+        android:gravity="center"
+        android:hint="@string/username"
         android:imeOptions="actionNext"
         android:inputType="textCapWords"
-        android:gravity="center"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toTopOf="@id/guideline3"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/edit_text_pass_signin"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/guideline4"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline1"
-        android:layout_marginLeft="@dimen/margin_0dp"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
-        android:layout_marginRight="@dimen/margin_0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline5"
+        android:layout_height="45dp"
         android:layout_marginBottom="@dimen/margin_8dp"
-        android:hint="@string/password"
+        android:layout_marginLeft="@dimen/margin_0dp"
+        android:layout_marginRight="@dimen/margin_0dp"
+        android:layout_marginTop="@dimen/margin_16dp"
         android:background="@drawable/textview_ui1"
         android:gravity="center"
+        android:hint="@string/password"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/edit_text_username_signin" />
+
     <Button
         android:id="@+id/button_user_signin"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline6"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline7"
+        android:layout_height="45dp"
         android:layout_marginBottom="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_32dp"
+        android:background="@drawable/bg_button_selected1"
+        android:text="@string/sign_in"
+        android:textColor="@color/colorWhite"
         app:layout_constraintLeft_toLeftOf="@id/guideline1"
         app:layout_constraintRight_toRightOf="@id/guideline2"
-        android:text="@string/sign_in"
-        android:background="@drawable/bg_button_selected1"
-        android:textColor="@color/colorWhite"/>
+        app:layout_constraintTop_toBottomOf="@id/edit_text_pass_signin" />
+
     <TextView
         android:id="@+id/txtForgetPass"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline7"
-        android:layout_marginTop="@dimen/margin_4dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline8"
+        android:layout_height="30dp"
         android:layout_marginBottom="@dimen/margin_4dp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline1"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
+        android:layout_marginTop="@dimen/margin_8dp"
+        android:gravity="center"
         android:text="@string/forget_password"
-        android:gravity="center"/>
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline8"
-        app:layout_constraintBottom_toBottomOf="@id/guideline9"
-        android:layout_marginBottom="@dimen/margin_4dp"
         app:layout_constraintLeft_toLeftOf="@id/guideline1"
         app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/button_user_signin" />
+
+    <TextView
+        android:id="@+id/text_view_or"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="@dimen/margin_4dp"
+        android:gravity="center"
         android:text="@string/or"
-        android:gravity="center"/>
-    <com.facebook.login.widget.LoginButton
+        app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/txtForgetPass" />
+
+    <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
         android:id="@+id/button_login_facebook"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline9"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline10"
-        android:layout_marginBottom="@dimen/margin_8dp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline1"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
+        android:layout_height="45dp"
+        android:layout_marginTop="@dimen/margin_16dp"
         android:background="@drawable/bg_button_selected3"
-        android:text="@string/sign_in_facebook"
-        android:textColor="@color/colorWhite"/>
-
+        android:paddingBottom="14dp"
+        android:paddingTop="14dp"
+        android:textColor="@color/colorWhite"
+        facebook:com_facebook_login_text="@string/sign_in_facebook"
+        facebook:layout_constraintLeft_toLeftOf="@id/guideline1"
+        facebook:layout_constraintRight_toRightOf="@id/guideline2"
+        facebook:layout_constraintTop_toBottomOf="@id/text_view_or"
+        facebook:layout_goneMarginBottom="@dimen/margin_8dp" />
 
     <Button
         android:id="@+id/btnLoginPhone_signin"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline10"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline11"
-        android:layout_marginBottom="@dimen/margin_8dp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline1"
-        app:layout_constraintRight_toRightOf="@id/guideline2"
+        android:layout_height="45dp"
+        android:layout_marginTop="@dimen/margin_10dp"
         android:background="@drawable/bg_button_selected2"
         android:text="@string/sign_in_phone"
-        android:textColor="@color/colorWhite"/>
+        android:textColor="@color/colorWhite"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@id/guideline1"
+        app:layout_constraintRight_toRightOf="@id/guideline2"
+        app:layout_constraintTop_toBottomOf="@id/button_login_facebook" />
 
     <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="@dimen/margin_4dp"
+        android:layout_marginTop="@dimen/margin_8dp"
         android:src="@drawable/bglogin02"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/guideline11"
-        android:layout_marginBottom="@dimen/margin_4dp"/>
+        app:layout_constraintTop_toBottomOf="@id/btnLoginPhone_signin" />
 </android.support.constraint.ConstraintLayout>
+
+
+
+
