--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -101,7 +101,7 @@
     <EditText
         android:id="@+id/edtUsername_signup"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="45dp"
         android:hint="@string/username"
         android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/guideline10"
@@ -110,7 +110,6 @@
         android:layout_marginLeft="0dp"
         app:layout_constraintRight_toRightOf="@id/guideline3"
         android:layout_marginRight="@dimen/margin_0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline11"
         android:layout_marginBottom="@dimen/margin_8dp"
         app:layout_constraintHorizontal_bias="0.0"
         android:imeOptions="actionNext"
@@ -120,14 +119,13 @@
     <EditText
         android:id="@+id/edtPass_signup"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/guideline11"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/edtUsername_signup"
+        android:layout_marginTop="@dimen/margin_16dp"
         app:layout_constraintLeft_toLeftOf="@id/guideline2"
         android:layout_marginLeft="@dimen/margin_0dp"
         app:layout_constraintRight_toRightOf="@id/guideline3"
         android:layout_marginRight="@dimen/margin_0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline12"
         android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="@string/password"
         android:gravity="center"
@@ -137,14 +135,13 @@
     <EditText
         android:id="@+id/edtConfirmPass_signup"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/guideline12"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/edtPass_signup"
+        android:layout_marginTop="@dimen/margin_16dp"
         app:layout_constraintLeft_toLeftOf="@id/guideline2"
         android:layout_marginLeft="@dimen/margin_0dp"
         app:layout_constraintRight_toRightOf="@id/guideline3"
         android:layout_marginRight="@dimen/margin_0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline13"
         android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="@string/confirm_password"
         android:gravity="center"
@@ -156,24 +153,24 @@
     <Button
         android:id="@+id/btnSignUp_signup"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/guideline15"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/edtConfirmPass_signup"
+        android:layout_marginTop="@dimen/margin_32dp"
         android:text="@string/sign_up"
         app:layout_constraintLeft_toLeftOf="@id/guideline2"
         android:layout_marginLeft="@dimen/margin_0dp"
         app:layout_constraintRight_toRightOf="@id/guideline3"
         android:layout_marginRight="@dimen/margin_0dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline6"
         android:layout_marginBottom="@dimen/margin_8dp"
         android:background="@drawable/bg_button_selected1"
         android:textColor="@color/colorWhite"/>
 
     <TextView
+        android:id="@+id/text_view_ors"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline6"
-        app:layout_constraintBottom_toBottomOf="@id/guideline5"
+        android:layout_height="40dp"
+        app:layout_constraintTop_toBottomOf="@id/btnSignUp_signup"
+        android:layout_marginBottom="@dimen/margin_4dp"
         app:layout_constraintLeft_toLeftOf="@id/guideline2"
         android:layout_marginLeft="@dimen/margin_0dp"
         app:layout_constraintRight_toRightOf="@id/guideline3"
@@ -186,29 +183,27 @@
         android:id="@+id/guideline5"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.70" />
-
-    <Button
-        android:id="@+id/btnLoginFB_signup"
+    <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/button_login_fb_signup"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guideline5"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintBottom_toBottomOf="@id/guidel7"
-        android:layout_marginBottom="@dimen/margin_8dp"
-        app:layout_constraintLeft_toLeftOf="@id/guideline2"
-        android:layout_marginLeft="@dimen/margin_0dp"
-        app:layout_constraintRight_toRightOf="@id/guideline3"
-        android:text="@string/sign_in_facebook"
+        android:layout_height="45dp"
         android:background="@drawable/bg_button_selected3"
-        android:textColor="@color/colorWhite"/>
+        android:paddingBottom="14dp"
+        android:paddingTop="14dp"
+        android:textColor="@color/colorWhite"
+        facebook:com_facebook_login_text="@string/sign_in_facebook"
+        facebook:layout_constraintLeft_toLeftOf="@id/guideline2"
+        facebook:layout_constraintRight_toRightOf="@id/guideline3"
+        facebook:layout_constraintTop_toBottomOf="@id/text_view_ors"
+        facebook:layout_goneMarginBottom="@dimen/margin_8dp"
+        app:layout_constraintHorizontal_bias="0.0"/>
 
     <Button
         android:id="@+id/btnLoginPhone_signup"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/guidel7"
-        android:layout_marginTop="@dimen/margin_8dp"
-        app:layout_constraintBottom_toBottomOf="@id/guideline8"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toBottomOf="@id/button_login_fb_signup"
+        android:layout_marginTop="@dimen/margin_10dp"
         android:layout_marginBottom="@dimen/margin_8dp"
         app:layout_constraintLeft_toLeftOf="@id/guideline2"
         android:layout_marginLeft="@dimen/margin_0dp"
@@ -216,6 +211,4 @@
         android:text="@string/sign_in_phone"
         android:background="@drawable/bg_button_selected2"
         android:textColor="@color/colorWhite"/>
-
-
 </android.support.constraint.ConstraintLayout>
