--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -69,8 +69,7 @@
         android:layout_marginTop="@dimen/margin_32dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="centerCrop"
-        android:onClick="showPopupMenu"/>
+        android:scaleType="centerCrop"/>
     <TextView
         android:layout_width="0dp"
         android:layout_height="40dp"
@@ -94,7 +93,9 @@
         android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="@string/full_name"
         android:background="@drawable/textview_ui1"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:imeOptions="actionNext"
+        android:inputType="textCapWords"/>
     <EditText
         android:id="@+id/edit_text_email"
         android:layout_width="0dp"
@@ -109,7 +110,9 @@
         android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="@string/email"
         android:background="@drawable/textview_ui1"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:imeOptions="actionNext"
+        android:inputType="textEmailAddress"/>
     <EditText
         android:id="@+id/edit_text_address"
         android:layout_width="0dp"
@@ -124,7 +127,9 @@
         android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="@string/address"
         android:background="@drawable/textview_ui1"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:imeOptions="actionNext"
+        android:inputType="textCapWords"/>
     <EditText
         android:id="@+id/edit_text_phone"
         android:layout_width="0dp"
@@ -139,7 +144,9 @@
         android:layout_marginBottom="@dimen/margin_8dp"
         android:hint="@string/phone"
         android:background="@drawable/textview_ui1"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:imeOptions="actionDone"
+        android:inputType="phone"/>
     <LinearLayout
         android:id="@+id/linear_sex"
         android:layout_width="0dp"
