--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -95,7 +95,7 @@
         android:background="@drawable/textview_ui1"
         android:gravity="center"
         android:imeOptions="actionNext"
-        android:inputType="textCapWords"/>
+        android:inputType="textPersonName"/>
     <EditText
         android:id="@+id/edit_text_email"
         android:layout_width="0dp"
