--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -66,7 +66,7 @@
         android:gravity="center"
         android:hint="@string/username"
         android:imeOptions="actionNext"
-        android:inputType="textCapWords"
+        android:inputType="textEmailAddress"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/guideline1"
         app:layout_constraintRight_toRightOf="@id/guideline2"
