--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,16 +14,13 @@
         android:id="@+id/coordinator_layout"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorWhite">
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:id="@+id/lytSearchBar"
                 android:layout_width="match_parent"
@@ -33,26 +30,38 @@
                 android:orientation="vertical"
                 android:visibility="visible"
                 app:layout_scrollFlags="scroll|enterAlways">
-
                 <ImageView
+                    android:id="@+id/image_view_details"
                     android:layout_width="match_parent"
                     android:layout_height="220dp"
                     android:layout_margin="@dimen/margin_8dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/bglogin5" />
-
-                <Button
-                    android:id="@+id/button_ready_detail"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    android:layout_marginLeft="@dimen/margin_32dp"
-                    android:layout_marginRight="@dimen/margin_32dp"
-                    android:layout_marginTop="@dimen/margin_8dp"
-                    android:background="@drawable/bg_button_selected4"
-                    android:text="@string/app_name"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="18dip"/>
+                    android:layout_height="44dp">
+                    <Button
+                        android:id="@+id/button_ready_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="34dp"
+                        android:layout_marginTop="@dimen/margin_8dp"
+                        android:layout_marginLeft="@dimen/margin_16dp"
+                        android:background="@drawable/bg_button_selected4"
+                        android:text="@string/app_name"
+                        android:textAllCaps="false"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18dip"
+                        android:layout_marginRight="72dp"/>
+                    <ImageView
+                        android:id="@+id/image_view_bookmark_detail"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/bookmark2"
+                        android:layout_marginRight="@dimen/margin_16dp"
+                        android:layout_alignParentRight="true"/>
+
+                </RelativeLayout>
+
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -116,6 +125,7 @@
                 android:layout_weight="1"
                 android:background="@color/colorPrimary" />
         </android.support.design.widget.AppBarLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -148,6 +158,13 @@
                 android:layout_height="match_parent"
                 android:visibility="gone"/>
         </LinearLayout>
+        <!---<ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="@dimen/margin_16dp"
+            android:src="@drawable/like"
+            />-->
 
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
