--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:gravity="center_vertical"
+        android:layout_marginLeft="@dimen/margin_24dp"
         android:textSize="18dp"
         android:text="TEST"
         android:textColor="@color/colorPrimary"/>
