--- a/app/src/main/res/layout/activity_register_owner.xml
+++ b/app/src/main/res/layout/activity_register_owner.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btn_registerowner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
