--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -159,24 +159,29 @@
                 android:visibility="gone"/>
         </LinearLayout>
         <RelativeLayout
+            android:id="@+id/layout_rating"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="bottom"
-            android:background="@color/colorWhite">
+            android:background="@color/colorWhite"
+            android:visibility="visible">
             <RatingBar
-                android:id="@+id/ratingBar1"
+                android:id="@+id/ratingBar_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="96dp"/>
+                android:layout_marginRight="104dp"/>
             <Button
+                android:id="@+id/button_rating"
                 android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/margin_8dp"
                 android:text="@string/button_send"
-                />
+                android:textColor="@color/colorPrimary"
+                android:background="@drawable/bg_button_selected4"/>
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
