--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -76,14 +76,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
+
             <EditText
+                android:id="@+id/edt_search_location"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
+                android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/margin_8dp"
                 android:layout_marginRight="@dimen/margin_8dp"
                 android:background="@drawable/textview_ui1"
-                android:hint="@string/search_location"
-                android:layout_gravity="center"/>
+                android:hint="@string/search_location" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
