--- a/app/src/main/res/layout/row_item_search.xml
+++ b/app/src/main/res/layout/row_item_search.xml
@@ -56,13 +56,13 @@
                     android:id="@+id/text_view_ago_search"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="22.5 km"
-                    android:textSize="14dip"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="@dimen/margin_8dp"
                     android:gravity="right"
-                    android:layout_marginRight="@dimen/margin_8dp"/>
+                    android:text="22.5 km"
+                    android:textSize="14dip" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/text_view_caterogy_search"
+                    android:id="@+id/text_view_pricelimit_search"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingRight="@dimen/margin_64dp"
@@ -91,13 +91,14 @@
                         android:layout_marginRight="34dp"
                         android:paddingTop="2dp"
                         android:text="3" />
+
                     <ImageView
                         android:id="@+id/image_star"
                         android:layout_width="22dp"
                         android:layout_height="22dp"
+                        android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/margin_8dp"
                         android:scaleType="centerCrop"
-                        android:layout_alignParentRight="true"
                         android:src="@drawable/star" />
                 </RelativeLayout>
             </RelativeLayout>
