--- a/app/src/main/res/layout/toolbar_search.xml
+++ b/app/src/main/res/layout/toolbar_search.xml
@@ -25,18 +25,12 @@
                 android:background="@drawable/custom_framelayout"
                 android:layout_marginLeft="@dimen/margin_8dp"
                 android:layout_marginRight="@dimen/margin_8dp">
-                <ImageView
-                    android:layout_width="26dp"
-                    android:layout_height="26dp"
-                    android:src="@drawable/ic_search_black_24dp"
-                    android:layout_marginTop="@dimen/margin_4dp"
-                    android:layout_marginLeft="2dp"/>
-                <AutoCompleteTextView
+
+                <SearchView
+                    android:id="@+id/edit_search_item"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingLeft="@dimen/margin_32dp"
-                    android:background="@android:color/transparent"
-                    />
+                    android:background="@android:color/transparent" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
