--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_home"/>
 
     <item
-        android:id="@+id/navigation_search"
+        android:id="@+id/navigation_bookmark"
         android:icon="@drawable/ic_bookmark_black_24dp"
         android:title="@string/title_bookmark"/>
 
