--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -45,6 +45,11 @@
                 android:icon="@drawable/ic_face_black_24dp"
                 android:title="Quản lý Admin"
                 android:visible="true" />
+            <item
+                android:id="@+id/log_out"
+                android:icon="@drawable/ic_face_black_24dp"
+                android:title="Đăng xuất"
+                android:visible="true" />
         </menu>
     </group>
 </menu>
