--- a/app/src/main/res/layout/row_item_search.xml
+++ b/app/src/main/res/layout/row_item_search.xml
@@ -37,6 +37,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_4dp"
                 android:text="@string/app_name"
+                android:ellipsize="end"
+                android:lines="1"
                 android:textSize="20dip"
                 android:textStyle="bold" />
 
