--- a/app/src/main/res/layout/activity_add_category_product.xml
+++ b/app/src/main/res/layout/activity_add_category_product.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.linhnv.foodsy.activity.PlacesOwnerActivity">
+    tools:context="com.linhnv.foodsy.activity.AddCategoryProduct">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcy_owner"
+        android:id="@+id/rcy_categoryproduct"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fab_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -32,5 +32,4 @@
         app:srcCompat="@drawable/ic_add_white_24dp"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintRight_creator="1" />
-
 </android.support.constraint.ConstraintLayout>
