--- a/app/src/main/res/layout/activity_addplace.xml
+++ b/app/src/main/res/layout/activity_addplace.xml
@@ -12,9 +12,9 @@
         android:padding="@dimen/margin_8dp">
 
         <ImageView
-            android:id="@+id/image_restaurant_product"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:id="@+id/image_add_places"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_32dp"
             android:scaleType="centerCrop"
             android:src="@drawable/camera"
@@ -38,7 +38,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_restaurant_product" />
+            app:layout_constraintTop_toBottomOf="@+id/image_add_places" />
 
         <EditText
             android:id="@+id/edit_text_descriptionproduct"
@@ -63,33 +63,31 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="7dp"
             android:background="@drawable/textview_ui1"
             android:ems="10"
             android:hint="Địa chỉ"
             android:inputType="text"
             android:padding="@dimen/margin_10dp"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/img_location"
             app:layout_constraintTop_toBottomOf="@+id/edit_text_descriptionproduct" />
 
-        <EditText
-            android:id="@+id/edit_text_typeproduct"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/textview_ui1"
-            android:ems="10"
-            android:hint="Thành phố"
-            android:inputType="text"
-            android:padding="@dimen/margin_10dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />
+        <!--<EditText-->
+            <!--android:id="@+id/edit_text_cityproduct"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:layout_marginRight="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:background="@drawable/textview_ui1"-->
+            <!--android:ems="10"-->
+            <!--android:hint="Thành phố"-->
+            <!--android:inputType="text"-->
+            <!--android:padding="@dimen/margin_10dp"-->
+            <!--app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--app:layout_constraintRight_toRightOf="parent"-->
+            <!--app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />-->
 
         <EditText
             android:id="@+id/edit_text_phone"
@@ -106,7 +104,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_typeproduct" />
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_address" />
 
         <EditText
             android:id="@+id/edit_text_email"
@@ -193,58 +191,60 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_text_time_close" />
 
-        <EditText
-            android:id="@+id/edit_text_my_location"
+        <ImageView
+            android:id="@+id/img_location"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/location"
+            android:layout_marginRight="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_descriptionproduct"
+            app:layout_constraintBottom_toBottomOf="@+id/edit_text_address"
+            android:layout_marginBottom="8dp" />
+
+        <Spinner
+            android:id="@+id/sp_category2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
             android:background="@drawable/textview_ui1"
-            android:ems="10"
-            android:hint="Vị trí nhà hàng"
-            android:inputType="text"
-            android:padding="@dimen/margin_10dp"
-            app:layout_constraintHorizontal_bias="0.0"
+            android:textSize="17dp"
+            app:layout_constraintHorizontal_bias="0.529"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/edit_text_wifi_restaurants" />
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="0dp"
+            android:layout_margin="@dimen/margin_8dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_my_location"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toBottomOf="@+id/sp_category2"
+            app:layout_constraintHorizontal_bias="0.363"
+            app:layout_constraintVertical_bias="0.076">
 
             <Button
-                android:id="@+id/btn_registerplaces"
+                android:id="@+id/btn_registerplaces2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_button_selected2"
                 android:text="Đăng ký"
                 android:textColor="@color/colorWhite" />
 
             <Button
-                android:id="@+id/btn_clear"
+                android:id="@+id/btn_clear2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_button_selected2"
                 android:text="Nhập lại"
