--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -9,7 +9,7 @@
 
 
         <ImageView
-            android:id="@+id/image_restaurant_product"
+            android:id="@+id/image_add_places"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="@dimen/margin_32dp"
@@ -35,7 +35,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image_restaurant_product" />
+            app:layout_constraintTop_toBottomOf="@+id/image_add_places" />
 
         <EditText
             android:id="@+id/edit_text_descriptionproduct"
@@ -72,7 +72,7 @@
             app:layout_constraintTop_toBottomOf="@+id/edit_text_descriptionproduct" />
 
         <EditText
-            android:id="@+id/edit_text_typeproduct"
+            android:id="@+id/edit_text_cityproduct"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -101,7 +101,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_typeproduct"
+            app:layout_constraintTop_toBottomOf="@+id/edit_text_cityproduct"
             app:layout_constraintVertical_bias="0.0">
 
                 <Button
