--- a/app/src/main/res/layout/activity_register_owner.xml
+++ b/app/src/main/res/layout/activity_register_owner.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/image_restaurant_product"
+        android:id="@+id/image_add_places"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="@dimen/margin_32dp"
@@ -33,7 +33,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_restaurant_product" />
+        app:layout_constraintTop_toBottomOf="@+id/image_add_places" />
     <EditText
         android:id="@+id/edit_text_phone_number"
         android:layout_width="0dp"
